--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
             <a class="nav-link" href="#">Precios</a>
           </li>
         </ul>
-        <button class="btn btn-outline-success" type="submit">Iniciar sesión</button>
+        <button class="btn btn-outline-success" type="submit">
+          <img src="usuario.png" width="25x" alt="">Iniciar sesión</button>
         <button class="btn btn-outline-success" type="submit">Registrarse</button>
       </div>
     </div>
   </nav>
+  <div>
+    <img src="PORTADA.jpg" width="1880x" height="750" alt="">
+  </div>
 
 </body>
 
