--- a/Inicio-Sesion.html
+++ b/Inicio-Sesion.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Inicio de Sesion </title>
+    <title>Inicio de Sesión - Comedor Universitario</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            text-align: center;
+        }
+        h1 {
+            font-size: 36px;
+            margin: 0;
+            color: #333;
+        }
+        h2 {
+            font-size: 18px;
+            color: #666;
+            margin: 0 0 20px 0;
+        }
+        .login-box {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+        }
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            background-color: #e7f6e7;
+        }
+        .login-btn {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+            margin-top: 10px;
+        }
+        .login-btn:hover {
+            background-color: #555;
+        }
+        .forgot-password {
+            margin-top: 15px;
+            display: block;
+            color: #333;
+            text-decoration: none;
+        }
+        .forgot-password:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <H1> INICIO DE SECION COMEDOR UNIVERSITARIO </H1>
+    <div class="container">
+        <h1>INICIO DE SESION</h1>
+        <h2>COMEDOR UNIVERSITARIO</h2>
+        <div class="login-box">
+            <form action="login.php" method="POST">
+                <input type="text" name="username" placeholder="Nombre" required>
+                <input type="password" name="password" placeholder="Contraseña" required>
+                <button type="submit" class="login-btn">INICIAR SESION</button>
+            </form>
+            <a href="#" class="forgot-password">¿Olvidó Contraseña?</a>
+        </div>
+    </div>
 </body>
 </html>
