--- a/Inicio-Sesion.html
+++ b/Inicio-Sesion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión - Comedor Universitario</title>
-    <link rel="stylesheet" href="Estilo-InicioSesión.css">
+    <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
     <div class="container">
