--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Precios</a>
           </li>
         </ul>
-        <button class="btn btn-outline-success" type="button" onclick="window.location.href='Inicio-Sesion.html';">
+        <button class="btn btn-outline-success" type="button" onclick="window.location.href='Inicio.html';">
           <img src="usuario.png" width="25x" alt="">Iniciar sesión</button>
         <button class="btn btn-outline-success" type="submit">Registrarse</button>
       </div>
