--- a/Inicio.html
+++ b/Inicio.html
@@ -56,7 +56,7 @@
                 <input type="password" name="password" placeholder="Contraseña" required>
                 <button type="submit" class="login-btn">INICIAR SESION</button>
             </form>
-            <a href="#" class="forgot-password">¿Olvidó Contraseña?</a>
+            <a href="RecuperarContraseña.html" class="forgot-password">¿Olvidó Contraseña?</a>
         </div>
     </div>
 
